--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,11 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="people"></div>
+    <div id="colors"></div>
+    <div id="colors2"></div>
+
+    <div id='description1'></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
