--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
     <div id="colors2"></div>
 
     <div id='description1'></div>
+
+    <div id="mac"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
