--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <title>React App</title>
   </head>
   <body>
+    <div id="weather"></div>
     <div id="root"></div>
     <div id="people"></div>
     <div id="colors"></div>
@@ -30,6 +31,9 @@
     <div id='description1'></div>
 
     <div id="mac"></div>
+
+    <div id= 'displays'></div>
+    <div id="hotels"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
